# ChangeLog for x11-libs/libSM
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libSM/ChangeLog,v 1.66 2009/08/11 18:35:42 remi Exp $

  11 Aug 2009; Rémi Cardona <remi@gentoo.org> -libSM-1.0.2.ebuild,
  -libSM-1.0.3.ebuild:
  drop old ebuilds

  23 Jun 2009; Tobias Klausmann <klausman@gentoo.org> libSM-1.1.0.ebuild:
  Stable on alpha for xorg-server-1.5/xorg-x11-7.4

  15 May 2009; Raúl Porcel <armin76@gentoo.org> libSM-1.1.0.ebuild:
  arm/s390 stable

  04 May 2009; Samuli Suominen <ssuominen@gentoo.org> libSM-1.0.2.ebuild,
  libSM-1.0.3.ebuild, libSM-1.1.0.ebuild:
  Move use_ functions out of global scope.

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> libSM-1.1.0.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> libSM-1.1.0.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> libSM-1.1.0.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> libSM-1.1.0.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> libSM-1.1.0.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libSM-1.1.0.ebuild:
  Marking libSM-1.1.0 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> libSM-1.1.0.ebuild:
  Marking libSM-1.1.0 ppc stable for bug 251832

  23 Aug 2008; Alexis Ballier <aballier@gentoo.org> libSM-1.1.0.ebuild:
  e2fsprogs-libs now provides libuuid, change the dep to || with e2fsprogs,
  bug #234988.

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>; libSM-1.1.0.ebuild:
  (#230981) Add sys-fs/e2fsprogs to RDEPEND for libuuid.

*libSM-1.1.0 (05 Jul 2008)

  05 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>; +libSM-1.1.0.ebuild:
  Bump for X.Org 7.4.

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -libSM-1.0.1.ebuild:
  Clean up.

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> libSM-1.0.3.ebuild: