@@ -1,4 +1,6 @@
 DIST libSM-1.1.0.tar.bz2 252599 RMD160 17edd4f1e931058f86ccdff17829115d2c1f5bad SHA1 2760a80f0bd1b4728535a92601ce2db0b98cdd98 SHA256 7536ac382e1ff82014d3a0defba0c61b3a30984f4e5bc7707960d6debcb92a82
+DIST libSM-1.1.1.tar.bz2 262305 RMD160 18aba022ccfbe842d025bf66c30a9f56510475f2 SHA1 dc535af7328dee9a6121b85c3f8041656681a195 SHA256 f50d184d8c6a031b3ff4f0d52efcfd4ffa811b0362b166a9ff9ba4c2e9aa7ce0
 EBUILD libSM-1.1.0.ebuild 615 RMD160 4b6aa8489ac3fae5cf49a46465e88b957098650a SHA1 83f3691a595a5e942f88b4a96dc12bb47159eae1 SHA256 3a08447ba500fd2da947d8d5082b56b64789ba7e880a2f01b9f3cd7d2b55e7ec
-MISC ChangeLog 7652 RMD160 b1a67c84a9061a5e5ad596f910d01289f1dbf74e SHA1 d3c3d67a37e7d9ec9ce234fcdbc370b077dada06 SHA256 b9483b4364c99db2de6bae0d9bc3404db81a6a19da61b4372727e82de4a4ca45
+EBUILD libSM-1.1.1.ebuild 657 RMD160 d36869bbaf88202c3310e5058ffd39e8f4be2be1 SHA1 80cab106865d27d9fcf5b9a45fedfb30c07e4377 SHA256 3c26b6e3af529158558b12e8061e5fe872b8154bded32a4a3ebaece0027262d6
+MISC ChangeLog 7793 RMD160 f9cff722d89b59a9b0326ddbb57b77db3689b92b SHA1 d121c4ec31d57772eb5813954037006282bebfc6 SHA256 82d4771b83f39343adf10694593377f329e85b4370efee4a8cd021e37328593e
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
